Fix bio text alignment

--- a/less/main.less
+++ b/less/main.less
@@ -366,6 +366,10 @@ table {
 
   .about-me {
     font-size: 16px;
+
+    & > p {
+      margin-top: 0;
+    }
   }
 
   .photo img {
